--- a/src/public/loading-error.html
+++ b/src/public/loading-error.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Rocket.Chat</title>
+	<title>HipLounge</title>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/main.css">
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
