--- a/src/public/app.html
+++ b/src/public/app.html
@@ -23,46 +23,46 @@
 	<div class="sidebar sidebar--hidden">
 		<ul id="sidebar__servers">
 		</ul>
-		<!--<ul>-->
-			<!--<li class="add-server">-->
-				<!--<span>+</span>-->
-				<!--<div class="tooltip">Add new server</div>-->
-			<!--</li>-->
-		<!--</ul>-->
+		<ul>
+			<li class="add-server">
+				<span>+</span>
+				<div class="tooltip">Add new server</div>
+			</li>
+		</ul>
 	</div>
 
-	<!--<section class="landing-page">-->
-		<!--<div class="wrapper">-->
-			<!--<header>-->
-				<!--<img class="logo" src="./images/logo-dark.svg" />-->
-			<!--</header>-->
+	<section class="landing-page">
+		<div class="wrapper">
+			<header>
+				<img class="logo" src="./images/logo-dark.svg" />
+			</header>
 
-			<!--<div class="loading-indicator">-->
-				<!--<span class="dot"></span>-->
-				<!--<span class="dot"></span>-->
-				<!--<span class="dot"></span>-->
-			<!--</div>-->
+			<div class="loading-indicator">
+				<span class="dot"></span>
+				<span class="dot"></span>
+				<span class="dot"></span>
+			</div>
 
-			<!--<form id="login-card" method="/">-->
-				<!--<header>-->
-					<!--<h2 class="connect__prompt">Enter your server URL</h2>-->
-				<!--</header>-->
-				<!--<div class="fields">-->
-					<!--<div class="input-text active">-->
-						<!--<input type="text" name="host" placeholder="https://open.rocket.chat" dir="auto">-->
-					<!--</div>-->
-				<!--</div>-->
+			<form id="login-card" method="/">
+				<header>
+					<h2 class="connect__prompt">Enter your server URL</h2>
+				</header>
+				<div class="fields">
+					<div class="input-text active">
+						<input type="text" name="host" placeholder="https://open.rocket.chat" dir="auto">
+					</div>
+				</div>
 
-				<!--<div id="invalidUrl" style="display:none;" class="alert alert-danger">No valid server found</div>-->
+				<div id="invalidUrl" style="display:none;" class="alert alert-danger">No valid server found</div>
 
-				<!--<div class="connect__error alert alert-danger only-offline">Check connection</div>-->
+				<div class="connect__error alert alert-danger only-offline">Check connection</div>
 
-				<!--<div class="submit">-->
-					<!--<button type="submit" data-loading-text="Connecting..." class="button primary login">Connect</button>-->
-				<!--</div>-->
-			<!--</form>-->
-		<!--</div>-->
-	<!--</section>-->
+				<div class="submit">
+					<button type="submit" data-loading-text="Connecting..." class="button primary login">Connect</button>
+				</div>
+			</form>
+		</div>
+	</section>
 
 	<div class="drag-region"></div>
 </body>
