134 Change the menu points

--- a/src/public/app.html
+++ b/src/public/app.html
@@ -20,7 +20,7 @@
 	</script>
 </head>
 <body class="app-page app-page--loading">
-	<div class="sidebar sidebar--hidden">
+	<div style="display: none" class="sidebar sidebar--hidden">
 		<ul id="sidebar__servers">
 		</ul>
 		<ul>
@@ -31,7 +31,7 @@
 		</ul>
 	</div>
 
-	<section class="landing-page">
+	<section style="display: none" class="landing-page">
 		<div class="wrapper">
 			<header>
 				<img class="logo" src="./images/logo-dark.svg" />
